--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -3,28 +3,29 @@ name: yoloyi GitHub Page Deploy
 on:
   push:
     branches:
-    - master
+      - master
 
 jobs:
   build-deploy:
     runs-on: ubuntu-18.04
     steps:
-    - uses: actions/checkout@v1
-  
-      
-    - name: Setup Hugo
-      uses: peaceiris/actions-hugo@v2
-      with:
-        hugo-version: '0.59.1'
-        # extended: true
+      - name: Checkout master
+      - uses: actions/checkout@v1
 
-    - name: Build Hugo
-      run:  HUGO_ENV=production hugo --gc --minify
-      
-    - name: Deploy Hugo to gh-pages
-      uses: peaceiris/actions-gh-pages@v2.5.0
-      env:
-        ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_TOKEN}}
-        # 你的github page分支
-        PUBLISH_BRANCH: gh-pages
-        PUBLISH_DIR: ./public
+
+      - name: Setup Hugo
+        uses: peaceiris/actions-hugo@v2
+        with:
+          hugo-version: '0.59.1'
+          extended: true
+
+      - name: Build Hugo
+        run:  HUGO_ENV=production hugo --gc --minify
+
+      - name: Deploy Hugo to gh-pages
+        uses: peaceiris/actions-gh-pages@v2.5.0
+        env:
+          ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_TOKEN}}
+          # 你的github page分支
+          PUBLISH_BRANCH: gh-pages
+          PUBLISH_DIR: ./public
