--- a/config.toml
+++ b/config.toml
@@ -8,7 +8,7 @@ hasCJKLanguage = false                                   # whether to include ch
 paginate = 12                                            # default amount of posts in each pages
 enableEmoji = true                                       # whether to use emoji code
 enableRobotsTXT = true                                   # whether to use robots.txt
-googleAnalytics = ""                                     # [UA-XXXXXXXX-X] google analytics code
+googleAnalytics = "UA-138453134-4"                                     # [UA-XXXXXXXX-X] google analytics code
 disqusShortname = "dillonzq"                             # Disqus shortname to use Disqus in posts
 copyright = "This work is licensed under a Creative Commons Attribution-NonCommercial 4.0 International License."
                                                          # copyright description used only for seo schema
