--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,9 +1,9 @@
-name: yoloyi GitHub Page Deploy
+name: Yoloyi GitHub Page Deploy
 
 on:
   push:
     branches:
-      - master
+      - develop
 
 jobs:
   build-deploy:
@@ -28,5 +28,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v2
         env:
           ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-          PUBLISH_BRANCH: gh-pages
+          PUBLISH_BRANCH: master
           PUBLISH_DIR: ./public
