--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -17,8 +17,8 @@ jobs:
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
-          hugo-version: '0.59.1'
-          extended: true
+          hugo-version: '0.61.0'
+#          extended: true
 
       - name: Build Hugo
         run: |
