--- a/config.toml
+++ b/config.toml
@@ -52,10 +52,16 @@ staticDir = ["static", "data"]               # static directories
     weight = 3
 
   [[menu.main]]
+    identifier = "juejin"
+    name = "Juejin"
+    url = "https://juejin.im/user/5e05c80e518825127f086479"
+    weight = 4
+
+  [[menu.main]]
     identifier = "about"
     name = "About"
     url = "about"
-    weight = 4
+    weight = 5
 
 
 [params]
