--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://blog.yoloyi.com/"
+baseURL = "https://yoloyi.github.io/"
 languageCode = "zh"                                      # website language
 defaultContentLanguage = "zh"                            # [en, zh, ...] determines which i18n file to use
 title = "余农场主"                                   # website title
